src/objects/SCOM_Availability__c.object
<CustomObject>
    <fields>
        <fullName>External_Key__c</fullName>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Polling_Interval__c</fullName>
        <label>Polling Interval</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Server__c</fullName>
        <label>Server</label>
        <referenceTo>SCOM_Server__c</referenceTo>
        <relationshipName>SCOM_Availability</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Up</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Down</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Availability</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Down_Servers_Last_Updated</fullName>
        <columns>NAME</columns>
        <columns>Server__c</columns>
        <columns>Status__c</columns>
        <columns>Polling_Interval__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Down</value>
        </filters>
        <label>Down Servers Last Updated</label>
    </listViews>
    <nameField>
        <displayFormat>SAN-{000000000}</displayFormat>
        <label>SCOM Availability Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>